--- a/vidu1.html
+++ b/vidu1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIA ĐÌNH TRUNG NAM</title>
-     <link rel="icon" href="file:///D:/HTML/project/test/logo.jpg" type="image/x-icon">
+     <link rel="icon" href="https://hiennguyen2604.github.io/Hien-001/logo.jpg" type="image/x-icon">
     <style>
         /* CSS cơ bản để căn giữa nội dung và thiết lập màu sắc */
         body {
@@ -166,107 +166,107 @@
 		
         <!-- Hình ảnh sản phẩm -->
         <figure> 
-        <img id="img1" src="file:///D:/HTML/project/test/ba mẹ.jpg" alt="Ba mẹ Trung Nam">
+        <img id="img1" src="https://hiennguyen2604.github.io/Hien-001/ba mẹ.jpg" alt="Ba mẹ Trung Nam">
         <figcaption>Ba mẹ Trung Nam</figcaption>
         </figure>
 
         <figure>
-        <img id="img2" src="file:///D:/HTML/project/test/trung nam.jpg" alt="Trung Nam">
+        <img id="img2" src="https://hiennguyen2604.github.io/Hien-001/trung nam.jpg" alt="Trung Nam">
         <figcaption>Trung Nam</figcaption>
         </figure>
 
         <figure>
-        <img id="img3" src="file:///D:/HTML/project/test/nam.jpg" alt="Nam">
+        <img id="img3" src="https://hiennguyen2604.github.io/Hien-001/nam.jpg" alt="Nam">
         <figcaption>Nam</figcaption>
         </figure>
 
         <figure>
-        <img id="img4" src="file:///D:/HTML/project/test/ba & nam.jpg" alt="Nam được ba bồng">
+        <img id="img4" src="https://hiennguyen2604.github.io/Hien-001/ba & nam.jpg" alt="Nam được ba bồng">
         <figcaption>Nam được ba bồng</figcaption>
         </figure>
 
         <figure> 
-        <img id="img5" src="file:///D:/HTML/project/test/ăn vụng.jpg" alt="ăn vụng">
+        <img id="img5" src="file:https://hiennguyen2604.github.io/Hien-001/ăn vụng.jpg" alt="ăn vụng">
         <figcaption>ăn vụng</figcaption>
         </figure>
 		
 		<figure> 
-        <img id="img6" src="file:///D:/HTML/project/test/anh 2 buồn.jpg" alt="anh 2 buồn">
+        <img id="img6" src="https://hiennguyen2604.github.io/Hien-001/anh 2 buồn.jpg" alt="anh 2 buồn">
         <figcaption>anh 2 buồn</figcaption>
         </figure>
 
         <figure> 
-        <img id="img7" src="file:///D:/HTML/project/test/anh em trên sofa.jpg" alt="anh em trên sofa">
+        <img id="img7" src="https://hiennguyen2604.github.io/Hien-001/anh em trên sofa.jpg" alt="anh em trên sofa">
         <figcaption>anh em trên sofa</figcaption>
         </figure>
 
         <figure> 
-        <img id="img8" src="file:///D:/HTML/project/test/ba bo tự sướng.jpg" alt="ba bo tự sướng">
+        <img id="img8" src="https://hiennguyen2604.github.io/Hien-001/ba bo tự sướng.jpg" alt="ba bo tự sướng">
         <figcaption>ba bo tự sướng</figcaption>
         </figure>
 
         <figure> 
-        <img id="img9" src="file:///D:/HTML/project/test/ba tự sướng 1.jpg" alt="ba tự sướng 1">
+        <img id="img9" src="https://hiennguyen2604.github.io/Hien-001/ba tự sướng 1.jpg" alt="ba tự sướng 1">
         <figcaption>ba tự sướng 1</figcaption>
         </figure>
 
         <figure> 
-        <img id="img10" src="file:///D:/HTML/project/test/ba tự sướng 2.jpg" alt="ba tự sướng 2">
+        <img id="img10" src="https://hiennguyen2604.github.io/Hien-001/ba tự sướng 2.jpg" alt="ba tự sướng 2">
         <figcaption>ba tự sướng 2</figcaption>
         </figure>
 
         <figure> 
-        <img id="img11" src="file:///D:/HTML/project/test/ba và bi.jpg" alt="ba và bi">
+        <img id="img11" src="https://hiennguyen2604.github.io/Hien-001/ba và bi.jpg" alt="ba và bi">
         <figcaption>ba và bi</figcaption>
         </figure>
 
         <figure> 
-        <img id="img12" src="file:///D:/HTML/project/test/bo bi đẹp trai.jpg" alt="bo bi đẹp trai">
+        <img id="img12" src="https://hiennguyen2604.github.io/Hien-001/bo bi đẹp trai.jpg" alt="bo bi đẹp trai">
         <figcaption>bo bi đẹp trai</figcaption>
         </figure>
 
         <figure> 
-        <img id="img13" src="file:///D:/HTML/project/test/bo vui đùa.jpg" alt="bo vui đùa">
+        <img id="img13" src="https://hiennguyen2604.github.io/Hien-001/bo vui đùa.jpg" alt="bo vui đùa">
         <figcaption>bo vui đùa</figcaption>
         </figure>
 
         <figure> 
-        <img id="img14" src="file:///D:/HTML/project/test/người và hoa.jpg" alt="người và hoa">
+        <img id="img14" src="https://hiennguyen2604.github.io/Hien-001/người và hoa.jpg" alt="người và hoa">
         <figcaption>người và hoa</figcaption>
         </figure>
 
         <figure> 
-        <img id="img15" src="file:///D:/HTML/project/test/sinh nhật anh hai bi.jpg" alt="sinh nhật anh hai bi">
+        <img id="img15" src="https://hiennguyen2604.github.io/Hien-001/sinh nhật anh hai bi.jpg" alt="sinh nhật anh hai bi">
         <figcaption>sinh nhật anh hai bi</figcaption>
         </figure>
 
         <figure> 
-        <img id="img16" src="file:///D:/HTML/project/test/sinh nhật ba.jpg" alt="sinh nhật ba">
+        <img id="img16" src="https://hiennguyen2604.github.io/Hien-001/sinh nhật ba.jpg" alt="sinh nhật ba">
         <figcaption>sinh nhật ba</figcaption>
         </figure>
 
         <figure> 
-        <img id="img17" src="file:///D:/HTML/project/test/sinh nhật ông ngoại 001.jpg" alt="sinh nhật ông ngoại 001">
+        <img id="img17" src="https://hiennguyen2604.github.io/Hien-001/sinh nhật ông ngoại 001.jpg" alt="sinh nhật ông ngoại 001">
         <figcaption>sinh nhật ông ngoại 001</figcaption>
         </figure>
 
         <figure> 
-        <img id="img18" src="file:///D:/HTML/project/test/sinh nhật ông ngoại 002.jpg" alt="sinh nhật ông ngoại 002">
+        <img id="img18" src="https://hiennguyen2604.github.io/Hien-001/sinh nhật ông ngoại 002.jpg" alt="sinh nhật ông ngoại 002">
         <figcaption>sinh nhật ông ngoại 002</figcaption>
         </figure>
 
         <figure> 
-        <img id="img19" src="file:///D:/HTML/project/test/sinh nhật ông ngoại 003.jpg" alt="sinh nhật ông ngoại 003">
+        <img id="img19" src="https://hiennguyen2604.github.io/Hien-001/sinh nhật ông ngoại 003.jpg" alt="sinh nhật ông ngoại 003">
         <figcaption>sinh nhật ông ngoại 003</figcaption>
         </figure>
 
         <figure> 
-        <img id="img20" src="file:///D:/HTML/project/test/sinh nhật ông ngoại 003.jpg" alt="sơ mi trắng">
+        <img id="img20" src="https://hiennguyen2604.github.io/Hien-001/sinh nhật ông ngoại 003.jpg" alt="sơ mi trắng">
         <figcaption>sơ mi trắng</figcaption>
         </figure>
 
         <figure> 
-        <img id="img21" src="file:///D:/HTML/project/test/trồng cây.jpg" alt="trồng cây">
+        <img id="img21" src="https://hiennguyen2604.github.io/Hien-001/trồng cây.jpg" alt="trồng cây">
         <figcaption>trồng cây</figcaption>
         </figure>
         <hr/>
